# fixeddec

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: bench.rs
src/: constants.rs  lib.rs  number.rs
