[package]
name = "fixeddec"
version = "0.1.0"
edition = "2024"
description = "fixed precision decimal"
license = "MIT/Apache-2.0"
authors = ["Vincent Hanquez <vincent@coretype.io>"]
rust-version = "1.85"
homepage = "https://github.com/vincenthz/fixeddec"
repository = "https://github.com/vincenthz/fixeddec"
keywords = [ "Arithmetic", "Decimal" ]
categories = ["Mathematics"]

[dependencies]
